deps/v8/test/message/no-legacy-const.out
*%(basename)s:7: SyntaxError: Unexpected token const
const x = 42;
^^^^^

SyntaxError: Unexpected token const
